--- a/css/style1.css
+++ b/css/style1.css
@@ -2,17 +2,146 @@
 		HTML Initial Setup
 *************************************/
 *{
-	margin:0;
+	margin: 0;
 }
 
-/************************************
-		Header/Logo/NavBar
-*************************************/
+html{
+	width: 100%;
+	height: 100%;
+	/*min-width: 1300px;*/
+	/* Use Responsive or Not to use Responsive ?*/
+}
 
+body{
+	width: 100%;
+	height: 100%;
+	background-color: #e7feff;
+}
+
+.full_wrap{
+	min-height: 100%;
+}
+
+.exception_wrap{
+	background-color: #ffffff;
+}
+/************************************
+			Header & Logo
+*************************************/
+.header{
+	height: 70px;
+	padding: 20px;
+	background-color: #747474;
+}
+
+.logo{
+	margin-top:15px;
+	text-align: center;
+}
+
+.logo img{
+	max-width: 100%;
+    height: auto;
+}
+/************************************
+			Navigation Bar
+*************************************/
+.navbar{
+	height: 30px;
+	padding:10px;
+	margin-top: 3px;
+	background-color: #747474;
+	line-height: 30px;
+	text-align: center;
+	font-family: "Montserrat", sans-serif;
+}
+
+ul li{
+	display: inline-block;
+	margin-right:20px;
+}
+
+ul li a{
+	text-decoration:none;
+	color: #ffffff;
+	font-size: 16pt;
+}
+/************************************
+			  Footer
+*************************************/
+.footer{
+	height: 150px;
+	padding: 20px;
+	background-color: #747474;
+}
+
+.left_footer_wrapper{
+	margin-top: 20px;
+	float: left;
+}
+
+.footer_phone{
+	width: 250px;
+	color: #f0ffff;
+	font-size: 15pt;
+	font-family: 'Lato', sans-serif;
+}
+
+.footer_phone img{
+	margin-right: 5px;
+	line-height: 50px;
+}
+
+.footer_mail{
+	width: 280px;
+	color: #f0ffff;
+	margin-top: 50px;
+	font-size: 15pt;
+	font-family: 'Lato', sans-serif;
+}
+
+.footer_mail img{
+	margin-right: 10px;
+}
+
+.footer_location{
+	width: 220px;
+	margin-top: 40px;
+	float: right;
+	color: #f0ffff;
+	font-size: 15pt;
+	font-family: 'Lato', sans-serif;
+}
+.footer_location img{
+	margin-top: 19px;
+	margin-right: 20px;
+}
 /************************************
 			index.php
 *************************************/
+.services{
+	width: 380px;
+	border-radius: 5px;
+	margin: 10px 0px 0px 10px;
+}
 
+.services h3{
+	padding: 10px;
+	color: #ffffff; 
+	background: #0099ff;
+	text-align: center;
+	font-family: 'Lato', sans-serif;
+}
+
+.services p{
+	margin-top: 3px;
+	padding: 10px 0px 10px 10px;
+	line-height: 30px;
+	color: #f0ffff;
+	background-color: #89cff0;
+	font-size: 14pt;
+	font-family: 'Lato', sans-serif;
+}
 /************************************
 			contact.php
 *************************************/
